# backup-docker-files

./: .gitignore  Cargo.toml  README.md  sample-docker-compose.yml
.github/: copilot-instructions.md
src/: cli.rs  constants.rs  main.rs
src/clients/: mod.rs  pocketbase.rs
src/models/: backup.rs  container.rs  extraction.rs  label.rs  labels.rs  mirror.rs  mod.rs  repo.rs  repository.rs
src/services/: backup.rs  discovery.rs  mirror.rs  mod.rs  repository.rs
src/services/extraction/: file.rs  mod.rs  pocketbase.rs  sqlite.rs  tinydb.rs  utils.rs
